fixing caption spacing issue FIT-1305

--- a/modules/custom/cu_shortcodes/css/cu_shortcodes.css
+++ b/modules/custom/cu_shortcodes/css/cu_shortcodes.css
@@ -394,11 +394,10 @@ a.expand-title:focus {
 }
 div.image-caption img {
   display: block;
-  margin-bottom: -20px;
 }
 div.image-caption  p:first-child {
   display: block;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
 }
 .image-caption p:last-child {
